# fefu-music

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: tests.yml
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml  traefik.toml
fefu_music/: __init__.py  __main__.py  conftest.py  settings.py  tkq.py
fefu_music/db/: config.py
fefu_music/db/dao/: refresh_token_dao.py  user_dao.py
fefu_music/db/migrations/models/: 1_20231130101151_update.py
fefu_music/db/models/: __init__.py  refresh_token_model.py  user_model.py
fefu_music/services/: __init__.py
fefu_music/services/auth/: __init__.py  schema.py  utils.py
fefu_music/services/github/: __init__.py  dependencies.py  schema.py
fefu_music/services/yandex_music_api/: __init__.py  dependencies.py  lifetime.py  utils.py
fefu_music/tests/: __init__.py  test_auth.py  test_fefu_music.py  test_landing.py
fefu_music/web/: __init__.py  application.py  lifetime.py
fefu_music/web/api/: __init__.py  router.py  schema.py
fefu_music/web/api/albums/: __init__.py  schema.py  views.py
fefu_music/web/api/auth/: __init__.py  dependencies.py  schema.py  views.py
fefu_music/web/api/landing/: __init__.py  schema.py  views.py
fefu_music/web/api/monitoring/: __init__.py
fefu_music/web/api/playlists/: __init__.py  schema.py  views.py
fefu_music/web/api/tracks/: __init__.py  schema.py  views.py
